// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalWindow /> Should works with mode 1`] = `
<ModalWindow
  accessStatus={
    Array [
      "Открыт",
      "Выполнен",
      "Закрыт",
      "В работе",
    ]
  }
  actionType=""
  actionTypeList="default"
  defaultView={false}
  editableContent=""
  isLoadList={true}
  keyTask=""
  mode="reg"
  modeControll=""
  modeEditContent={false}
  onCaching={[Function]}
  onCancelEditModeContent={[Function]}
  onEdit={[Function]}
  onRejectEdit={[Function]}
  onUpdate={[Function]}
  onUpdateEditable={[Function]}
  path=""
  primaryKey=""
  routeDataActive={Object {}}
  rulesEdit={true}
  rulesStatus={true}
  statusTaskValue="В работе"
  typeRequst=""
  udata={Object {}}
>
  <Button
    aria-label="reg-button"
    block={false}
    ghost={false}
    htmlType="button"
    loading={false}
    onClick={[Function]}
    type="primary"
  >
    <Wave>
      <button
        aria-label="reg-button"
        className="ant-btn ant-btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          key=".0"
        >
          Регистрация
        </span>
      </button>
    </Wave>
  </Button>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Регистрация"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <Component
      className="modalWindow"
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <Icon
            className="ant-modal-close-icon"
            type="close"
          />
        </span>
      }
      confirmLoading={false}
      footer={
        <LocaleReceiver
          componentName="Modal"
          defaultLocale={
            Object {
              "cancelText": "Cancel",
              "justOkText": "OK",
              "okText": "OK",
            }
          }
        >
          [Function]
        </LocaleReceiver>
      }
      maskTransitionName="fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      onOk={[Function]}
      prefixCls="ant-modal"
      title="Регистрация"
      transitionName="zoom"
      visible={false}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={false}
      />
    </Component>
  </Modal>
</ModalWindow>
`;

exports[`<ModalWindow /> Should works with mode 2`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <ActionList
      entityName="taskView"
      isLoadList={true}
      modeControll=""
      onEdit={[Function]}
      onMessage={[Function]}
      onRejectEdit={[Function]}
      onUpdateEditable={[Function]}
      rulesEdit={true}
      rulesStatus={true}
      showModal={[Function]}
      viewType="default"
    />
  </div>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    destroyOnClose={true}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Отчет времени"
    transitionName="zoom"
    visible={false}
    width={520}
  />
</Fragment>
`;

exports[`<ModalWindow /> Should works with mode 3`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <ActionList
      entityName="taskView"
      isLoadList={true}
      modeControll=""
      onEdit={[Function]}
      onMessage={[Function]}
      onRejectEdit={[Function]}
      onUpdateEditable={[Function]}
      rulesEdit={true}
      rulesStatus={true}
      showModal={[Function]}
      viewType="default"
    />
  </div>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    destroyOnClose={true}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Отчет времени"
    transitionName="zoom"
    visible={false}
    width={520}
  />
</Fragment>
`;

exports[`<ModalWindow /> Should works with mode 4`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <ActionList
      entityName="taskView"
      isLoadList={true}
      modeControll="edit"
      onEdit={[Function]}
      onMessage={[Function]}
      onRejectEdit={[Function]}
      onUpdateEditable={[Function]}
      rulesEdit={true}
      rulesStatus={true}
      showModal={[Function]}
      viewType="default"
    />
  </div>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    destroyOnClose={true}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Редактирование"
    transitionName="zoom"
    visible={true}
    width={520}
  >
    <Textarea
      className="editContentDescription"
      defaultValue=""
      editor={false}
      editorKey=""
      key="textAreaEdit"
      name=""
      onChange={[Function]}
      onClick={null}
      onKeyDown={null}
      row={10}
      value=""
    />
  </Modal>
</Fragment>
`;

exports[`<ModalWindow /> Should works with mode 5`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <ActionList
      entityName="taskView"
      isLoadList={true}
      modeControll="edit"
      onEdit={[Function]}
      onMessage={[Function]}
      onRejectEdit={[Function]}
      onUpdateEditable={[Function]}
      rulesEdit={true}
      rulesStatus={true}
      showModal={[Function]}
      viewType="default"
    />
  </div>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    destroyOnClose={true}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Отчет времени"
    transitionName="zoom"
    visible={false}
    width={520}
  />
</Fragment>
`;

exports[`<ModalWindow /> Should works with mode 6`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <ActionList
      entityName="taskView"
      isLoadList={true}
      modeControll="default"
      onEdit={[Function]}
      onMessage={[Function]}
      onRejectEdit={[Function]}
      onUpdateEditable={[Function]}
      rulesEdit={true}
      rulesStatus={true}
      showModal={[Function]}
      viewType="default"
    />
  </div>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    destroyOnClose={true}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Редактирование"
    transitionName="zoom"
    visible={true}
    width={520}
  >
    <Textarea
      className="editContentDescription"
      defaultValue=""
      editor={false}
      editorKey=""
      key="textAreaEdit"
      name=""
      onChange={[Function]}
      onClick={null}
      onKeyDown={null}
      row={10}
      value=""
    />
  </Modal>
</Fragment>
`;
